--- a/src/app/style/meet-the-team.css
+++ b/src/app/style/meet-the-team.css
@@ -21,6 +21,7 @@
   text-transform: uppercase;
   color: #333333;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .meet-the-team p {
