--- a/src/app/style/our-story.css
+++ b/src/app/style/our-story.css
@@ -206,7 +206,7 @@
 
 @media (max-width: 1330px) {
   .our-story-hero {
-    height: 65vh;
+    height: 40vh;
     padding-top: 65px;
   }
 
@@ -277,7 +277,7 @@
 
 @media (max-width: 1024px) {
   .our-story-hero {
-    height: 35vh;
+    height: 40vh;
     padding-top: 65px;
   }
 
@@ -435,8 +435,8 @@
 @media (max-width: 768px) {
   .our-story-hero {
     background: linear-gradient(135deg, #002f6c, #0080ff);
-    height: 25vh;
-    padding-top: 5px;
+    height: 40vh;
+    padding-top: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -647,8 +647,8 @@
 @media (max-width: 640px) {
   .our-story-hero {
     background: linear-gradient(135deg, #002f6c, #0080ff);
-    height: 25vh;
-    padding-top: 5px;
+    height: 35vh;
+    padding-top: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -859,8 +859,8 @@
 @media (max-width: 480px) {
   .our-story-hero {
     background: linear-gradient(135deg, #002f6c, #0080ff);
-    height: 20vh;
-    padding-top: 9px;
+    height: 30vh;
+    padding-top: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -875,11 +875,13 @@
 
   .our-goal,
   .lead-advisors {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 70px 40px;
+    border: 1px solid red;
   }
 
   .our-goal h3,
@@ -947,6 +949,8 @@
     padding: 70px 40px;
     gap: 40px;
     background-color: #dde1e7;
+    overflow-x: hidden;
+    position: relative;
   }
 
   .founder .ceo-img {
